---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.10944                                -
---------------------------------------------
- 2021-07-22                                -
---------------------------------------------
.: WSM: Task - Notify user when add as contributor (WSM-420)

---------------------------------------------
- 2021-07-21                                -
---------------------------------------------
.: WSM: Task - Able to edit message (WSM-410)

---------------------------------------------
- 2021-07-20                                -
---------------------------------------------
.: WSM: Task - Add message note before send to merchant (WSM-410)
.: WSM: Task - Display New Products Category (WSM-404)
.: WSM: Task - No category when creating product (WSM-381)

- v1.0.10943                                -
---------------------------------------------
- 2021-07-18                                -
---------------------------------------------
.: WSM: Task - Send an email to notify once order has been approved by merchant (CMS3-397)
.: WSM: Task - Add free delivery confirmation (WSM-418)

---------------------------------------------
- 2021-07-14                                -
---------------------------------------------
.: WSM: Task - Search item by category (WSM-400)

---------------------------------------------
- 2021-07-14                                -
---------------------------------------------
.: WSM: Task - Showing pay-slip in invoice info (WSM-390)
.: WSM: Task - When create store, it is difficult to see the selected item (WSM-389)
.: WSM: Task - A customize name for on-selling item (WSM-412)

- v1.0.10942                                -
---------------------------------------------
- 2021-07-08                                -
---------------------------------------------