@@ -30,6 +30,7 @@ import { BusinessLocationComponent } from '@elements/business-location/business-
 import { DirectiveModule } from '../directive/directive.module';
 import { WsInvoiceCardComponent } from '@elements/ws-invoice-card/ws-invoice-card.component';
 import { WsSearchSelectComponent } from '@elements/ws-search-select/ws-search-select.component';
+import { WsReviewComponent } from '@elements/ws-review/ws-review.component';
 import { NgxMatSelectSearchModule } from 'ngx-mat-select-search';
 import { MatSelectInfiniteScrollModule } from 'ng-mat-select-infinite-scroll';
 import { WsInvoiceComponent } from '@elements/ws-invoice/ws-invoice.component';
@@ -70,7 +71,8 @@ import { PipeModule } from '../pipe/pipe.module';
     WsInvoiceComponent,
     WsMessageBarComponent,
     WsPriceListComponent,
-    WsStepperComponent
+    WsStepperComponent,
+    WsReviewComponent,
   ],
   imports: [
     AgmCoreModule,
@@ -116,6 +118,7 @@ import { PipeModule } from '../pipe/pipe.module';
     WsMessageBarComponent,
     WsPriceListComponent,
     WsStepperComponent,
+    WsReviewComponent,
     MatTabsModule,
     SwiperModule
   ]
