@@ -4,6 +4,11 @@
 
 - v1.0.10944                                -
 ---------------------------------------------
+- 2021-07-31                                -
+---------------------------------------------
+.: WSM: Task - Review Module (WSM-413)
+
+---------------------------------------------
 - 2021-07-22                                -
 ---------------------------------------------
 .: WSM: Task - Notify user when add as contributor (WSM-420)
